--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
-# scrap tool
+# scrape tool
 
 ## purpose
 - this tool is intended to be executed after you drop a shell in a remote server, but without root permissions, or in the scenario when there is no tools such as scp.
